--- a/BoardJPA/src/main/resources/application.properties
+++ b/BoardJPA/src/main/resources/application.properties
@@ -29,6 +29,9 @@ spring.security.oauth2.client.registration.google.scope=email
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
 
+#No serializer error 방지
+spring.jackson.serialization.fail-on-empty-beans=false
+
 # 내장 톰캣 설정
 tomcat.ajp.protocol=AJP/1.3
 tomcat.ajp.port=8009
