--- a/BoardJPA/src/main/resources/application.properties
+++ b/BoardJPA/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 # DB 설정
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=springjpa
-spring.datasource.password=12345
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=springjpa
+#spring.datasource.password=12345
+
+spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.hikari.username=springjpa
+spring.datasource.hikari.password=12345
+spring.datasource.hikari.connection-test-query=SELECT sysdate FROM DUAL
 
 # 개발 환경 설정
 spring.devtools.livereload.enabled=true
@@ -18,7 +24,7 @@ spring.thymeleaf.cache=false
 spring.jpa.database=oracle
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # OAuth2 설정
 spring.security.oauth2.client.registration.google.client-id=65712070804-a9ogqb8p2jt0blrii6kfmqptv5kbjt0i.apps.googleusercontent.com
