--- a/BoardOracle/src/main/resources/application.properties
+++ b/BoardOracle/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 # DB 설정
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=springdev
-spring.datasource.password=12345
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=springdev
+#spring.datasource.password=12345
+
+spring.datasource.hikari.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.hikari.jdbc-url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.hikari.username=springdev
+spring.datasource.hikari.password=12345
+spring.datasource.hikari.connection-test-query=SELECT sysdate FROM DUAL
+
 
 # mybatis 설정
 mybatis.config-locations=classpath:/mybatis-config.xml
